refactor: code consistency cleanup